id:1737275740287168513 commit:d3-shape-pie/stack demo的编写

--- a/d3_demos/aixs.html
+++ b/d3_demos/aixs.html
@@ -39,7 +39,7 @@
             .attr('transform',`translate(${marginLeft},0)`)
             .call(d3.axisLeft(y))
         // dom容器添加svg
-        container.append(svg.node())
+        container?.append(svg.node())
     </script>
 </body>
 </html>
