--- a/d3_demos/arcs.html
+++ b/d3_demos/arcs.html
@@ -28,7 +28,7 @@
                 startAngle: 0,
                 endAngle: -Math.PI *3 /2
             }))
-        container.append(svg.node())
+        container?.append(svg.node())
     </script>
 </body>
 </html>
