--- a/d3_demos/areas.html
+++ b/d3_demos/areas.html
@@ -61,7 +61,7 @@
                 .attr("fill", "currentColor")
                 .attr("text-anchor", "start")
                 .text("↑ Daily close ($)"));
-        container.append(svg.node())
+        container?.append(svg.node())
     }
 
 </script>
